# toyrenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  common.hpp  main.cpp  stdafx.hpp  utils.hpp  vcpkg.json
.github/workflows/: cmake-single-platform.yml
assets/textures/: encode-textures.md
shaders/: cubemap.frag  cubemap.vert  shadow.vert  simple.frag  simple.vert
src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  common.hpp  cube_map.cpp  cube_map.hpp  debug_utils.cpp  debug_utils.hpp  descriptors_manager.cpp  descriptors_manager.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  image_loader.cpp  image_loader.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  obj_loader.cpp  obj_loader.hpp  render.cpp  render.hpp  shadow.cpp  shadow.hpp  stdafx.hpp  uniforms.hpp  utils.cpp  utils.hpp  vertex.hpp  vma_impl.cpp  water_pass.cpp  water_pass.hpp
textures/: encode-textures.md
